# sipag

./: .gitignore  .sipag.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SIPAG_V3.md  VISION.md  _typos.toml  deny.toml  mkdocs.yml  package.json  poc.sh  run-backlog.sh
.claude/: CLAUDE.md
.claude/agents/: architecture-reviewer.md  backlog-triager.md  correctness-reviewer.md  security-reviewer.md
.claude/commands/: dispatch.md  ship-it.md  triage.md  work.md
.claude/hooks/: README.md  safety-gate.sh  safety-gate.toml
.github/workflows/: ci.yml  docs.yml  integration-test.yml  publish-worker.yml  release.yml  rust.yml
.husky/: pre-commit  pre-push
Formula/: sipag.rb
docs/: CNAME  architecture.md  cli-reference.md  concepts.md  configuration.md  faq.md  getting-started.md  how-it-works.md  index.md
docs/guides/: ci-integration.md  first-session.md  new-repo-setup.md
extras/: safety-gate.sh
lib/: doctor.sh  executor.sh  merge.sh  notify.sh  preflight.sh  refine.sh  refresh-docs.sh  repo.sh  review.sh  run.sh  setup.sh  start.sh  task.sh  triage.sh  worker.sh
lib/container/: conflict-fix-worker.sh  issue-worker.sh  iteration-worker.sh  sipag-state.sh  worker.sh
lib/core/: config.sh  log.sh  pool.sh  project.sh  worker.sh
lib/hooks/: safety-gate.sh
lib/prompts/: configure.md  init.md  merge.md  refresh-docs.md  start.md  work.md  worker-conflict-fix.md  worker-grouped.md  worker-issue.md  worker-iteration.md  worker-merge-forward.md  worker.md  workflow-reference.md
lib/sources/: _interface.sh  adhoc.sh  github.sh  tao.sh
lib/templates/: settings.local.json
scripts/: install.sh  release.sh  review-context.sh  review.sh  secrets-scan.sh
sipag/: Cargo.toml  build.rs
sipag-cli/: Cargo.toml
sipag-cli/src/: main.rs
sipag-cli/tests/: integration_test.rs
sipag-core/: Cargo.toml
sipag-core/src/: auth.rs  config.rs  docker.rs  events.rs  executor.rs  hooks.rs  init.rs  lessons.rs  lib.rs  prompt.rs  repo.rs  repository.rs  state.rs  task.rs  triage.rs  usage.rs  worker.rs  worker_state.rs
sipag-core/src/task/: aggregate.rs  mod.rs  naming.rs  parser.rs  repository.rs  storage.rs
sipag-core/src/worker/: auto_merge.rs  brainstorm.rs  config.rs  container.rs  cycle.rs  decision.rs  dedup.rs  dispatch.rs  dispatcher.rs  docker_runtime.rs  drain.rs  event_log.rs  gh_gateway.rs  github.rs  github_gateway.rs  hook_runner.rs  lifecycle.rs  lock.rs  loop_runner.rs  mod.rs  orchestrator.rs  poll.rs  ports.rs  prompt.rs  reconciliation.rs  recovery.rs  state.rs  status.rs  store.rs  work_config.rs
sipag-worker/: Cargo.toml
sipag-worker/src/: main.rs
sipag/src/: cli.rs  completions.rs  configure_project.rs  init_project.rs  main.rs  templates.rs  tui.rs  watch.rs  work.rs
sipag/src/orchestrator/: analyze.rs  claude.rs  events.rs  failure.rs  mod.rs  phase.rs  poll.rs  prune.rs  recover.rs  retro.rs  review.rs
sipag/tests/: cli_smoke.rs
tui/: Cargo.toml
(+68 files in other folders)
