[package]
name = "sipag-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sipag"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
sipag-core = { path = "../sipag-core" }

[dev-dependencies]
tempfile = "3"
