[package]
name = "sipag-core"
version = "0.1.0"
edition = "2021"
description = "Core library for sipag — sandbox launcher for Claude Code"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
