[package]
name = "sipag-worker"
version = "3.0.2"
edition = "2021"
description = "Container-side worker binary for sipag — replaces worker.sh"

[[bin]]
name = "sipag-worker"
path = "src/main.rs"

[dependencies]
sipag-core = { path = "../sipag-core" }
anyhow = "1"
chrono = { workspace = true }
serde_json = "1"
