[package]
name = "sipag"
version = "2.1.0"
edition = "2021"
description = "Sandbox launcher for Claude Code — single binary with CLI and TUI"

[[bin]]
name = "sipag"
path = "src/main.rs"

[dependencies]
sipag-core = { path = "../sipag-core" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
