[package]
name = "sipag"
version = "3.0.0"
edition = "2021"
description = "Sandbox launcher for Claude Code — single binary with CLI and TUI"

[[bin]]
name = "sipag"
path = "src/main.rs"

[dependencies]
sipag-core = { path = "../sipag-core" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
anyhow = "1"
libc = "0.2"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
predicates = "3"
tempfile = "3"
