[package]
name = "sipag"
version = "3.0.7"
edition = "2021"
description = "Sandbox launcher for Claude Code — single binary with CLI and TUI"

[[bin]]
name = "sipag"
path = "src/main.rs"

[dependencies]
sipag-core = { path = "../sipag-core" }
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
chrono = { workspace = true }
predicates = "3"
tempfile = "3"
